--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,23 +1,30 @@
-name: Trivy Scan on Public Docker Image
+name: Trivy Scan with Logs and Report
 
 on:
-  workflow_dispatch:          # Allows manual trigger
+  workflow_dispatch:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   trivy-scan:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Run Trivy Scan on nginx:latest
-        uses: aquasecurity/trivy-action@0.31.0        # ✅ Using v0.31.0
+      - name: Run Trivy Scan on nginx:latest (Console Output)
+        uses: aquasecurity/trivy-action@0.31.0
         with:
-          image-ref: 'nginx:latest'                     # ✅ Public image
-          format: 'sarif'                                # ✅ Report in SARIF format
-          output: 'trivy-results.sarif'                  # ✅ Output filename
-          exit-code: '1'                                 # ✅ Fail on CRITICAL/HIGH
+          image-ref: 'nginx:latest'
+          format: 'table'                 # ✅ Table for human-readable output
+          exit-code: '1'                  # ✅ Fail on critical/high
+          severity: 'CRITICAL,HIGH'
+
+      - name: Run Trivy Scan on nginx:latest (SARIF Report)
+        uses: aquasecurity/trivy-action@0.31.0
+        with:
+          image-ref: 'nginx:latest'
+          format: 'sarif'                 # ✅ Machine-readable SARIF report
+          output: 'trivy-results.sarif'
+          exit-code: '0'                  # ✅ Do not block on report-only step
           severity: 'CRITICAL,HIGH'
 
       - name: Upload SARIF Report to GitHub Security
@@ -26,7 +33,7 @@ jobs:
           sarif_file: trivy-results.sarif
 
       - name: Upload SARIF as Artifact
-        uses: actions/upload-artifact@v4                # ✅ Fixed to v4
+        uses: actions/upload-artifact@v4
         with:
           name: trivy-scan-report
           path: trivy-results.sarif
